%% CONCEPT-CLASS13
classDiagram
  class OrderInfo {
    +identifier: String
    +state: String
  }
  class Shipment {
    +identifier: String
    +state: String
  }
  class LogisticsTrace {
    +identifier: String
    +state: String
  }
  OrderInfo "1" --> "0..*" Shipment : 关联
  Shipment "0..*" --> "1" LogisticsTrace : 产生/归属
